--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.10.1",
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
